Add workspace run command
